Closed Bug 918937 Opened 12 years ago Closed 12 years ago

Defect - Regression - Long-tap in url bar, content inputs and links doesn't pop context menu

Categories

(Firefox for Metro Graveyard :: Input, defect, P2)

x86_64
Windows 8
defect

Tracking

(Not tracked)

RESOLVED FIXED
Firefox 27

People

(Reporter: sfoster, Assigned: jimm)

References

Details

(Whiteboard: feature=defect c=tbd u=tbd p=1)

Attachments

(1 file, 1 obsolete file)

We seem to have lost the long-tap for right-click/contextmenu across the board. In particular we have no touch-friendly way to paste or cut in the urlbar, or text or other field in content.
apz or async event work most likely. I'll take a look when I get a chance.
Summary: Regression - Long-tap in url bar, content inputs and links doesn't pop context menu → Defect - Regression - Long-tap in url bar, content inputs and links doesn't pop context menu
Whiteboard: [preview-triage] feature=defect c=tbd u=tbd p=0
Assignee: nobody → jmathies
Whiteboard: [preview-triage] feature=defect c=tbd u=tbd p=0 → [preview] feature=defect c=tbd u=tbd p=0
Attached patch patch (obsolete) — Splinter Review
The big issue here was that added HasPointMoved check we added in here. I also cleaned up some other stuff - making sure the recognizer gets cleared and a missing flag in the pointerup handler. With this patch in place our press-hold is working reliably again. This is built on top of bug 915213 so it'll have to wait for that work to land.
Whiteboard: [preview] feature=defect c=tbd u=tbd p=0 → [preview] feature=defect c=tbd u=tbd p=1
Attached patch patchSplinter Review
Attachment #809220 - Attachment is obsolete: true
Attachment #809341 - Flags: review?(netzen)
Attachment #809341 - Flags: review?(netzen) → review+
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 27
Blocks: metrov1it16
No longer blocks: metrov1backlog
Priority: -- → P2
QA Contact: jbecerra
Whiteboard: [preview] feature=defect c=tbd u=tbd p=1 → feature=defect c=tbd u=tbd p=1
Temporarily reopening to add to iteration. Will mark as resolved right after.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Status: REOPENED → RESOLVED
Closed: 12 years ago12 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: