Bug 918937 - Fix for buggy long tap - pass intermediate touch data to the gesture recognizer regardless of whether the base touch point has moved. r=bbondy